Trying to make a grid instead of a list

--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -39,4 +39,9 @@
         android:title="Debugging"
         android:orderInCategory="2"
         android:showAsAction="never"/>
+    <item
+        android:id="@+id/menu_tasker"
+        android:title="TaskerEdit"
+        android:orderInCategory="2"
+        android:showAsAction="never"/>
 </menu>
