--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -67,5 +67,10 @@
         <item name="android:background">@drawable/toggle_relay_bg</item>
         <item name="android:disabledAlpha">?android:attr/disabledAlpha</item>
     </style>
+    
+    <style name="ToggleButton.Contact" parent="@android:style/Widget.Holo.Light.Button.Toggle">
+        <item name="android:background">@drawable/toggle_contact_bg</item>
+        <item name="android:disabledAlpha">?android:attr/disabledAlpha</item>
+    </style>
 
 </resources>
