working on the tasker support
added a result card, grab the bundle from locale in the fragment

--- a/res/layout/devicelist_layout.xml
+++ b/res/layout/devicelist_layout.xml
@@ -22,6 +22,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
+    
+    <it.gmariotti.cardslib.library.view.CardView
+            android:id="@+id/cvResult"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="40dp"
+            android:layout_marginRight="40dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:visibility="gone"/>
 
     <it.gmariotti.cardslib.library.view.CardListView
         android:id="@+id/carddemo_list_base1"
