--- a/res/layout/devicegrid_layout.xml
+++ b/res/layout/devicegrid_layout.xml
@@ -23,6 +23,16 @@
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
+              
+    <it.gmariotti.cardslib.library.view.CardView
+            android:id="@+id/cvResult"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="40dp"
+            android:layout_marginRight="40dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:visibility="gone"/>
 
    <it.gmariotti.cardslib.library.view.CardGridView
        android:layout_marginTop="4dp"
