--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -26,17 +26,12 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/menu_settings"
-        android:title="@string/action_menu_settings"
+        android:title="@string/title_settings"
         android:orderInCategory="1"
         android:showAsAction="never"/>
     <item
         android:id="@+id/menu_about"
-        android:title="@string/action_menu_about"
-        android:orderInCategory="2"
-        android:showAsAction="never"/>
-    <item
-        android:id="@+id/menu_debug"
-        android:title="Debugging"
+        android:title="@string/title_about"
         android:orderInCategory="2"
         android:showAsAction="never"/>
 </menu>
