--- a/res/layout/dimmercard_inner.xml
+++ b/res/layout/dimmercard_inner.xml
@@ -41,6 +41,7 @@
         android:id="@+id/card_main_inner_simple_title"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
+        style="@style/AppTheme.TitleText"
         android:layout_marginLeft="10dp"
         android:layout_toRightOf="@id/colorBorder"
         android:gravity="center" />
@@ -70,7 +71,7 @@
             android:textOff=""
             android:textOn=""/>
 
-        <com.devadvance.circularseekbar.CircularSeekBar
+        <by.zatta.pilight.views.CircularSeekBar
             android:id="@+id/circularSeekBar1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
