Different settings - WIP
Added sunrise/sunset and updated for API change according
https://github.com/pilight/pilight/commit/9143536f55febd81382c62e78eb60bc73e1d4296#diff-a9e7de13789ae0109d289176ef6e511e

--- a/res/layout/weathercard_inner.xml
+++ b/res/layout/weathercard_inner.xml
@@ -59,11 +59,26 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="0dp"
-                android:text="xx C"
                 android:visibility="gone" />
 
             <TextView
                 android:id="@+id/card_main_inner_humidity"
+                style="@style/AppTheme.TitleText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="0dp"
+                android:visibility="gone" />
+            
+            <TextView
+                android:id="@+id/card_main_inner_sunrise"
+                style="@style/AppTheme.TitleText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="0dp"
+                android:visibility="gone" />
+
+            <TextView
+                android:id="@+id/card_main_inner_sunset"
                 style="@style/AppTheme.TitleText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
